force-app/main/default/objects/Feedback__c/Feedback__c.object-meta.xml
<CustomObject>
    <description>This Object is used to store Resource Ratings , Resource Concerns &amp; Client Ratings</description>
    <label>Feedback</label>
    <nameField>
        <displayFormat>Feedback-{0000}</displayFormat>
        <label>Feedback Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feedbacks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>