force-app/main/default/objects/Feedback__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is added to store the contact</description>
    <label>Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Feedbacks</relationshipLabel>
    <relationshipName>Feedbacks</relationshipName>
    <type>Lookup</type>
</CustomField>