force-app/main/default/objects/Feedback__c/fields/RatingDescription__c.field-meta.xml
<CustomField>
    <fullName>RatingDescription__c</fullName>
    <description>Description/explanation for the rating</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Rating Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>