force-app/main/default/objects/Feedback__c/fields/Referral__c.field-meta.xml
<CustomField>
    <fullName>Referral__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The referral for which the rating is submitted</description>
    <label>Referral</label>
    <referenceTo>Referral__c</referenceTo>
    <relationshipLabel>Feedbacks</relationshipLabel>
    <relationshipName>Feedbacks</relationshipName>
    <type>Lookup</type>
</CustomField>