force-app/main/default/objects/Feedback__c/fields/ResourceReceived__c.field-meta.xml
<CustomField>
    <fullName>ResourceReceived__c</fullName>
    <description>Indicates whether the resident received the resource when submitting the rating</description>
    <formula>TEXT(Referral__r.Outcome__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Did the resident receive the resource?</label>
    <type>Text</type>
</CustomField>