force-app/main/default/objects/Feedback__c/recordTypes/ClientFeedback.recordType-meta.xml
<RecordType>
    <fullName>ClientFeedback</fullName>
    <active>true</active>
    <description>Store Client Feedback</description>
    <label>Client Feedback</label>
</RecordType>