force-app/main/default/objects/Feedback__c/recordTypes/PartnerFeedback.recordType-meta.xml
<RecordType>
    <fullName>PartnerFeedback</fullName>
    <active>true</active>
    <description>Store Partner Feedback</description>
    <label>Resource Rating</label>
</RecordType>